--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "create-apps-dir": "mkdirp apps",
     "update:all": "npm update && npm-run-all -s update:apps",
     "update:apps": "cd apps && npm-run-all -p update:*",
-    "clean:all": "rimraf **/node_modules"
+    "clean:all": "rimraf **/node_modules",
+    "format": "prettier --write .",
+    "prepare": "husky install"
   },
   "author": "",
   "license": "ISC",
@@ -24,8 +26,14 @@
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
+    "husky": "^8.0.0",
+    "lint-staged": "^13.0.0",
     "mkdirp": "^1.0.4",
     "npm-run-all": "^4.1.5",
+    "prettier": "^2.8.8",
     "rimraf": "^3.0.2"
+  },
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
   }
 }
