--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "install:ayokoding": "cd apps/ayokoding && npm install",
     "clean:ayokoding": "rimraf apps/ayokoding/.next apps/ayokoding/out",
     "test:ayokoding": "cd apps/ayokoding && npm run test",
-    "install:all": "npm install && npm-run-all -s create-apps-dir install:ayokoding",
+    "install:all": "npm install && npm-run-all -s create-apps-dir install:ayokoding install:e2e-web",
     "create-apps-dir": "mkdirp apps",
     "update:all": "npm update && npm-run-all -s update:apps",
     "update:apps": "cd apps && npm-run-all -p update:*",
     "clean:all": "rimraf **/node_modules",
     "format": "prettier --write .",
     "prepare": "husky install && npm run make-hooks-executable",
-    "make-hooks-executable": "node scripts/make-hooks-executable.js"
+    "make-hooks-executable": "node scripts/make-hooks-executable.js",
+    "install:e2e-web": "cd apps/e2e-web && npm install",
+    "test:e2e": "cd apps/e2e-web && npm run test",
+    "reset:all": "npm-run-all clean:all install:all"
   },
   "author": "",
   "license": "ISC",
