--- a/apps/e2e-web/package.json
+++ b/apps/e2e-web/package.json
@@ -4,9 +4,12 @@
   "description": "E2E tests for AyoKoding",
   "scripts": {
     "test": "playwright test",
-    "test:ui": "playwright test --ui"
+    "test:ui": "playwright test --ui",
+    "test:chrome": "playwright test --project=chromium",
+    "test:firefox": "playwright test --project=firefox",
+    "test:safari": "playwright test --project=webkit"
   },
   "devDependencies": {
-    "@playwright/test": "^1.40.0"
+    "@playwright/test": "^1.47.0"
   }
 }
