--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "test:ayokoding:watch": "cd apps/ayokoding && npm run test:watch",
     "test:e2e": "cd apps/e2e-web && npm run test",
     "test:e2e:ui": "cd apps/e2e-web && npm run test:ui",
+    "test:e2e:chrome": "cd apps/e2e-web && npm run test:chrome",
+    "test:e2e:firefox": "cd apps/e2e-web && npm run test:firefox",
+    "test:e2e:safari": "cd apps/e2e-web && npm run test:safari",
     "install:all": "npm install && npm-run-all -s create-apps-dir install:ayokoding install:e2e-web",
     "create-apps-dir": "mkdirp apps",
     "update:all": "npm update && npm-run-all -s update:apps",
