--- a/package.json
+++ b/package.json
@@ -2,19 +2,23 @@
   "name": "the-organic",
   "version": "1.0.0",
   "scripts": {
+    "// AyoKoding scripts": "",
     "dev:ayokoding": "cd apps/ayokoding && npm run dev",
     "build:ayokoding": "cd apps/ayokoding && npm run build",
     "start:ayokoding": "cd apps/ayokoding && npm run start",
     "lint:ayokoding": "cd apps/ayokoding && npm run lint",
-    "install:ayokoding": "cd apps/ayokoding && npm install",
-    "clean:ayokoding": "rimraf apps/ayokoding/.next apps/ayokoding/out",
     "test:ayokoding": "cd apps/ayokoding && npm run test",
     "test:ayokoding:watch": "cd apps/ayokoding && npm run test:watch",
+    "install:ayokoding": "cd apps/ayokoding && npm install",
+    "clean:ayokoding": "rimraf apps/ayokoding/.next apps/ayokoding/out",
+    "// E2E Web scripts": "",
     "test:e2e": "cd apps/e2e-web && npm run test",
     "test:e2e:ui": "cd apps/e2e-web && npm run test:ui",
     "test:e2e:chrome": "cd apps/e2e-web && npm run test:chrome",
     "test:e2e:firefox": "cd apps/e2e-web && npm run test:firefox",
     "test:e2e:safari": "cd apps/e2e-web && npm run test:safari",
+    "install:e2e-web": "cd apps/e2e-web && npm install",
+    "// General scripts": "",
     "install:all": "npm install && npm-run-all -s create-apps-dir install:ayokoding install:e2e-web",
     "create-apps-dir": "mkdirp apps",
     "update:all": "npm update && npm-run-all -s update:apps",
@@ -23,7 +27,6 @@
     "format": "prettier --write .",
     "prepare": "husky install && npm run make-hooks-executable",
     "make-hooks-executable": "node scripts/make-hooks-executable.js",
-    "install:e2e-web": "cd apps/e2e-web && npm install",
     "reset:all": "npm-run-all clean:all install:all"
   },
   "author": "",
