--- a/.github/workflows/build-and-unit-test.yml
+++ b/.github/workflows/build-and-unit-test.yml
@@ -1,22 +1,28 @@
-name: CI
+name: Build and Unit Test
 
 on:
-  push:
-    branches: [main]
   pull_request:
+    branches: [main]
+  push:
     branches: [main]
 
 jobs:
-  test:
+  build-and-test:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v3
+
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: "18"
+          node-version: "20.17.0"
+
       - name: Install dependencies
         run: npm run install:all
-      - name: Run tests
-        run: npm run test:ayokoding
+
+      - name: Build AyoKoding
+        run: npm run build:ayokoding
+
+      - name: Run unit tests
+        run: npm run test:unit
