--- a/apps/ayokoding/package.json
+++ b/apps/ayokoding/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3300",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 3300",
     "lint": "next lint",
     "test": "jest",
     "test:watch": "jest --watch"
