--- a/.github/workflows/build-and-unit-tests.yml
+++ b/.github/workflows/build-and-unit-tests.yml
@@ -1,4 +1,4 @@
-name: Build and Unit Test
+name: Build and Unit Tests
 
 on:
   pull_request:
@@ -7,7 +7,7 @@ on:
     branches: [main]
 
 jobs:
-  build-and-test:
+  build-and-tests:
     runs-on: ubuntu-latest
 
     steps:
