--- a/package.json
+++ b/package.json
@@ -3,13 +3,12 @@
   "version": "1.0.0",
   "scripts": {
     "// AyoKoding scripts": "",
-    "dev:ayokoding": "cd apps/ayokoding && npm run dev",
+    "dev:ayokoding": "npm run build:libs && cd apps/ayokoding && npm run dev",
     "build:ayokoding": "cd apps/ayokoding && npm run build",
     "start:ayokoding": "cd apps/ayokoding && npm run start",
     "lint:ayokoding": "cd apps/ayokoding && npm run lint",
     "test:ayokoding": "cd apps/ayokoding && npm run test",
     "test:ayokoding:watch": "cd apps/ayokoding && npm run test:watch",
-    "install:ayokoding": "cd apps/ayokoding && npm install",
     "clean:ayokoding": "rimraf apps/ayokoding/.next apps/ayokoding/out",
     "// E2E Web scripts": "",
     "test:e2e": "cd apps/e2e-web && npm run test",
@@ -18,18 +17,25 @@
     "test:e2e:firefox": "cd apps/e2e-web && npm run test:firefox",
     "test:e2e:safari": "cd apps/e2e-web && npm run test:safari",
     "test:e2e:ci": "start-server-and-test 'npm run dev:ayokoding' http://localhost:3300 'npm run test:e2e'",
+    "// Library scripts": "",
+    "build:libs": "cd libs/hello && npm install && npm run build",
+    "test:libs": "cd libs/hello && npm run test",
+    "// Installation scripts": "",
+    "install:all": "npm install && npm-run-all -s create-apps-dir install:ayokoding install:e2e-web install:libs",
+    "install:ayokoding": "cd apps/ayokoding && npm install",
     "install:e2e-web": "cd apps/e2e-web && npm install",
-    "// General scripts": "",
-    "install:all": "npm install && npm-run-all -s create-apps-dir install:ayokoding install:e2e-web",
+    "install:libs": "cd libs/hello && npm install",
     "create-apps-dir": "mkdirp apps",
+    "// General scripts": "",
+    "build:all": "npm-run-all build:libs build:ayokoding",
+    "test:unit": "npm run build:libs && npm-run-all -p test:ayokoding test:libs",
     "update:all": "npm update && npm-run-all -s update:apps",
     "update:apps": "cd apps && npm-run-all -p update:*",
     "clean:all": "rimraf **/node_modules",
     "format": "prettier --write .",
     "prepare": "husky install && npm run make-hooks-executable",
     "make-hooks-executable": "node scripts/make-hooks-executable.js",
-    "reset:all": "npm-run-all clean:all install:all",
-    "test:unit": "npm-run-all -p test:ayokoding"
+    "reset:all": "npm-run-all clean:all install:all"
   },
   "author": "",
   "license": "MIT",
