--- a/.github/workflows/build-and-unit-tests.yml
+++ b/.github/workflows/build-and-unit-tests.yml
@@ -7,7 +7,7 @@ on:
     branches: [main]
 
 jobs:
-  build-and-unit-tests:
+  build-and-tests:
     runs-on: ubuntu-latest
 
     steps:
@@ -20,6 +20,9 @@ jobs:
 
       - name: Install dependencies
         run: npm run install:all
+
+      - name: Install and build libraries
+        run: npm run build:libs
 
       - name: Build AyoKoding
         run: npm run build:ayokoding
