--- a/apps/ayokoding/tsconfig.json
+++ b/apps/ayokoding/tsconfig.json
@@ -18,7 +18,8 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@libs/*": ["../../libs/*"]
     },
     "types": ["jest", "node"]
   },
