move dependencies up

--- a/apps/e2e-web/package.json
+++ b/apps/e2e-web/package.json
@@ -10,6 +10,7 @@
     "test:safari": "playwright test --project=webkit"
   },
   "devDependencies": {
-    "@playwright/test": "^1.47.0"
+    "@playwright/test": "^1.47.0",
+    "@types/node": "^20"
   }
 }
