--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "build:libs": "cd libs/hello && npm install && npm run build",
     "test:libs": "cd libs/hello && npm run test",
     "// Installation scripts": "",
-    "install:all": "npm install && npm-run-all -s create-apps-dir install:ayokoding install:e2e-web install:libs",
+    "install:all": "npm install && npm-run-all -s create-apps-dir install:ayokoding install:e2e-web install:libs install:playwright",
     "install:ayokoding": "cd apps/ayokoding && npm install",
     "install:e2e-web": "cd apps/e2e-web && npm install",
     "install:libs": "cd libs/hello && npm install",
@@ -44,15 +44,36 @@
     "node": "20.17.0",
     "npm": "10.8.3"
   },
+  "dependencies": {
+    "react": "^18",
+    "react-dom": "^18",
+    "next": "14.2.8",
+    "@libs/hello": "file:libs/hello"
+  },
   "devDependencies": {
+    "@playwright/test": "^1.47.0",
+    "@testing-library/jest-dom": "^6.0.0",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.0.0",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "cross-env": "^7.0.3",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.8",
     "husky": "^8.0.0",
+    "jest": "^29.0.0",
+    "jest-environment-jsdom": "^29.0.0",
     "lint-staged": "^13.0.0",
     "mkdirp": "^1.0.4",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8",
     "prettier": "^2.8.8",
     "rimraf": "^3.0.2",
-    "start-server-and-test": "^2.0.5"
+    "start-server-and-test": "^2.0.5",
+    "tailwindcss": "^3.4.1",
+    "ts-jest": "^29.0.0",
+    "typescript": "^5"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
