--- a/libs/hello/package.json
+++ b/libs/hello/package.json
@@ -5,7 +5,15 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
+    "watch": "tsc-watch --onSuccess \"echo Library built successfully\"",
     "test": "jest",
     "test:watch": "jest --watch"
+  },
+  "devDependencies": {
+    "typescript": "^5.0.0",
+    "tsc-watch": "^6.0.0",
+    "jest": "^29.0.0",
+    "ts-jest": "^29.0.0",
+    "@types/jest": "^29.0.0"
   }
 }
