--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "test:e2e:safari": "cd apps/e2e-web && npm run test:safari",
     "test:e2e:ci": "start-server-and-test 'npm run dev:ayokoding' http://localhost:3300 'npm run test:e2e'",
     "// Library scripts": "",
-    "build:libs": "cd libs/hello && npm install && npm run build",
+    "build:libs": "cd libs/hello && npm run build",
     "test:libs": "cd libs/hello && npm run test",
+    "test:libs:watch": "cd libs/hello && npm run test:watch",
+    "watch:libs": "cd libs/hello && npm run watch",
     "// Installation scripts": "",
     "install:all": "npm install && npm-run-all -s create-apps-dir install:ayokoding install:e2e-web install:libs install:playwright",
     "install:ayokoding": "cd apps/ayokoding && npm install",
@@ -30,6 +32,7 @@
     "// General scripts": "",
     "build:all": "npm-run-all build:libs build:ayokoding",
     "test:unit": "npm run build:libs && npm-run-all -p test:ayokoding test:libs",
+    "test:unit:watch": "npm-run-all -p test:ayokoding:watch test:libs:watch",
     "update:all": "npm update && npm-run-all -s update:apps",
     "update:apps": "cd apps && npm-run-all -p update:*",
     "clean:all": "rimraf **/node_modules",
@@ -73,7 +76,8 @@
     "start-server-and-test": "^2.0.5",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.0.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "nodemon": "^2.0.22"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
