add organic-lever app

--- a/package.json
+++ b/package.json
@@ -39,7 +39,21 @@
     "format": "prettier --write .",
     "prepare": "husky install && npm run make-hooks-executable",
     "make-hooks-executable": "node scripts/make-hooks-executable.js",
-    "reset:all": "npm-run-all clean:all install:all"
+    "reset:all": "npm-run-all clean:all install:all",
+    "// Organic Lever scripts": "",
+    "dev:organic-lever": "npm run build:libs && cd apps/organic-lever && npm run dev",
+    "build:organic-lever": "cd apps/organic-lever && npm run build",
+    "start:organic-lever": "cd apps/organic-lever && npm run start",
+    "lint:organic-lever": "cd apps/organic-lever && npm run lint",
+    "test:organic-lever": "cd apps/organic-lever && npm run test",
+    "test:organic-lever:watch": "cd apps/organic-lever && npm run test:watch",
+    "clean:organic-lever": "rimraf apps/organic-lever/.next apps/organic-lever/out",
+    "// Combined scripts": "",
+    "dev": "npm-run-all --parallel dev:ayokoding dev:organic-lever",
+    "build": "npm-run-all --parallel build:ayokoding build:organic-lever",
+    "test": "npm-run-all --parallel test:ayokoding test:organic-lever",
+    "lint": "npm-run-all --parallel lint:ayokoding lint:organic-lever",
+    "clean": "npm-run-all --parallel clean:ayokoding clean:organic-lever"
   },
   "author": "",
   "license": "MIT",
