--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "the-organic",
   "version": "1.0.0",
   "scripts": {
-    "// Installation scripts": "",
+    "// ----- Installation scripts ----- //": "",
     "install:all": "npm install && npm-run-all -s create-apps-dir install:ayokoding install:organic-lever install:e2e-web install:libs install:playwright",
     "install:ayokoding": "cd apps/ayokoding && npm install",
     "install:organic-lever": "cd apps/organic-lever && npm install",
@@ -10,7 +10,7 @@
     "install:libs": "cd libs/hello && npm install",
     "install:playwright": "cd apps/e2e-web && npx playwright install --with-deps",
     "create-apps-dir": "mkdirp apps",
-    "// AyoKoding scripts": "",
+    "// ----- AyoKoding scripts ----- //": "",
     "dev:ayokoding": "npm run build:libs && cd apps/ayokoding && npm run dev",
     "build:ayokoding": "cd apps/ayokoding && npm run build",
     "start:ayokoding": "cd apps/ayokoding && npm run start",
@@ -18,7 +18,7 @@
     "test:ayokoding": "cd apps/ayokoding && npm run test",
     "test:ayokoding:watch": "cd apps/ayokoding && npm run test:watch",
     "clean:ayokoding": "rimraf apps/ayokoding/.next apps/ayokoding/out",
-    "// Organic Lever scripts": "",
+    "// ----- Organic Lever scripts ----- //": "",
     "dev:organic-lever": "npm run build:libs && cd apps/organic-lever && npm run dev",
     "build:organic-lever": "cd apps/organic-lever && npm run build",
     "start:organic-lever": "cd apps/organic-lever && npm run start",
@@ -26,25 +26,25 @@
     "test:organic-lever": "cd apps/organic-lever && npm run test",
     "test:organic-lever:watch": "cd apps/organic-lever && npm run test:watch",
     "clean:organic-lever": "rimraf apps/organic-lever/.next apps/organic-lever/out",
-    "// E2E Web scripts": "",
+    "// ----- E2E Web scripts ----- //": "",
     "test:e2e": "cd apps/e2e-web && npm run test",
     "test:e2e:ui": "cd apps/e2e-web && npm run test:ui",
     "test:e2e:chrome": "cd apps/e2e-web && npm run test:chrome",
     "test:e2e:firefox": "cd apps/e2e-web && npm run test:firefox",
     "test:e2e:safari": "cd apps/e2e-web && npm run test:safari",
     "test:e2e:ci": "start-server-and-test 'npm run dev:ayokoding' http://localhost:3300 'npm run dev:organic-lever' http://localhost:3301 'cd apps/e2e-web && npm run test'",
-    "// Library scripts": "",
+    "// ----- Library scripts ----- //": "",
     "build:libs": "cd libs/hello && npm run build",
     "test:libs": "cd libs/hello && npm run test",
     "test:libs:watch": "cd libs/hello && npm run test:watch",
     "watch:libs": "cd libs/hello && npm run watch",
-    "// Combined scripts": "",
+    "// ----- Combined scripts ----- //": "",
     "dev": "npm-run-all --parallel dev:ayokoding dev:organic-lever",
     "build": "npm-run-all --parallel build:ayokoding build:organic-lever",
     "test": "npm-run-all --parallel test:ayokoding test:organic-lever",
     "lint": "npm-run-all --parallel lint:ayokoding lint:organic-lever",
     "clean": "npm-run-all --parallel clean:ayokoding clean:organic-lever",
-    "// General scripts": "",
+    "// ----- General scripts ----- //": "",
     "build:all": "npm-run-all build:libs build:ayokoding build:organic-lever",
     "test:unit": "npm run build:libs && npm-run-all -p test:ayokoding test:organic-lever test:libs",
     "test:unit:watch": "npm-run-all -p test:ayokoding:watch test:organic-lever:watch test:libs:watch",
