--- a/package.json
+++ b/package.json
@@ -64,9 +64,10 @@
     "npm": "10.8.3"
   },
   "dependencies": {
+    "@notionhq/client": "^2.2.15",
+    "next": "14.2.8",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.8"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@playwright/test": "^1.47.0",
@@ -84,6 +85,7 @@
     "jest-environment-jsdom": "^29.0.0",
     "lint-staged": "^13.0.0",
     "mkdirp": "^1.0.4",
+    "nodemon": "^3.1.4",
     "npm-run-all": "^4.1.5",
     "postcss": "^8",
     "prettier": "^2.8.8",
@@ -91,8 +93,7 @@
     "start-server-and-test": "^2.0.5",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.0.0",
-    "typescript": "^5",
-    "nodemon": "^2.0.22"
+    "typescript": "^5"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
