--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
     "@notionhq/client": "^2.2.15",
     "next": "14.2.8",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-query": "^3.39.3"
   },
   "devDependencies": {
     "@playwright/test": "^1.47.0",
