--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
     "next": "14.2.8",
     "react": "^18",
     "react-dom": "^18",
-    "react-query": "^3.39.3"
+    "react-query": "^3.39.3",
+    "fs-extra": "^11.1.1"
   },
   "devDependencies": {
     "@playwright/test": "^1.47.0",
