update ayokoding to ayokoding-web

--- a/package.json
+++ b/package.json
@@ -3,21 +3,21 @@
   "version": "1.0.0",
   "scripts": {
     "// ----- Installation scripts ----- //": "",
-    "install:all": "npm install && npm-run-all -s create-apps-dir install:ayokoding install:organic-lever-web install:organic-lever-web-e2e install:libs install:playwright",
-    "install:ayokoding": "cd apps/ayokoding && npm install",
+    "install:all": "npm install && npm-run-all -s create-apps-dir install:ayokoding-web install:organic-lever-web install:organic-lever-web-e2e install:libs install:playwright",
+    "install:ayokoding-web": "cd apps/ayokoding-web && npm install",
     "install:organic-lever-web": "cd apps/organic-lever-web && npm install",
     "install:organic-lever-web-e2e": "cd apps/organic-lever-web-e2e && npm install",
     "install:libs": "cd libs/hello && npm install",
     "install:playwright": "cd apps/organic-lever-web-e2e && npx playwright install --with-deps",
     "create-apps-dir": "mkdirp apps",
-    "// ----- AyoKoding scripts ----- //": "",
-    "dev:ayokoding": "npm run build:libs && cd apps/ayokoding && npm run dev",
-    "build:ayokoding": "cd apps/ayokoding && npm run build",
-    "start:ayokoding": "cd apps/ayokoding && npm run start",
-    "lint:ayokoding": "cd apps/ayokoding && npm run lint",
-    "test:ayokoding": "cd apps/ayokoding && npm run test",
-    "test:ayokoding:watch": "cd apps/ayokoding && npm run test:watch",
-    "clean:ayokoding": "rimraf apps/ayokoding/.next apps/ayokoding/out",
+    "// ----- ayokoding-web scripts ----- //": "",
+    "dev:ayokoding-web": "npm run build:libs && cd apps/ayokoding-web && npm run dev",
+    "build:ayokoding-web": "cd apps/ayokoding-web && npm run build",
+    "start:ayokoding-web": "cd apps/ayokoding-web && npm run start",
+    "lint:ayokoding-web": "cd apps/ayokoding-web && npm run lint",
+    "test:ayokoding-web": "cd apps/ayokoding-web && npm run test",
+    "test:ayokoding-web:watch": "cd apps/ayokoding-web && npm run test:watch",
+    "clean:ayokoding-web": "rimraf apps/ayokoding-web/.next apps/ayokoding-web/out",
     "// ----- Organic Lever scripts ----- //": "",
     "dev:organic-lever-web": "npm run build:libs && cd apps/organic-lever-web && npm run dev",
     "build:organic-lever-web": "cd apps/organic-lever-web && npm run build",
@@ -32,22 +32,22 @@
     "test:e2e:chrome": "cd apps/organic-lever-web-e2e && npm run test:chrome",
     "test:e2e:firefox": "cd apps/organic-lever-web-e2e && npm run test:firefox",
     "test:e2e:safari": "cd apps/organic-lever-web-e2e && npm run test:safari",
-    "test:e2e:ci": "start-server-and-test 'npm run dev:ayokoding' http://localhost:3300 'npm run dev:organic-lever-web' http://localhost:3301 'cd apps/organic-lever-web-e2e && npm run test'",
+    "test:e2e:ci": "start-server-and-test 'npm run dev:ayokoding-web' http://localhost:3300 'npm run dev:organic-lever-web' http://localhost:3301 'cd apps/organic-lever-web-e2e && npm run test'",
     "// ----- Library scripts ----- //": "",
     "build:libs": "cd libs/hello && npm run build",
     "test:libs": "cd libs/hello && npm run test",
     "test:libs:watch": "cd libs/hello && npm run test:watch",
     "watch:libs": "cd libs/hello && npm run watch",
     "// ----- Combined scripts ----- //": "",
-    "dev": "npm-run-all --parallel dev:ayokoding dev:organic-lever-web",
-    "build": "npm-run-all --parallel build:ayokoding build:organic-lever-web",
-    "test": "npm-run-all --parallel test:ayokoding test:organic-lever-web",
-    "lint": "npm-run-all --parallel lint:ayokoding lint:organic-lever-web",
-    "clean": "npm-run-all --parallel clean:ayokoding clean:organic-lever-web",
+    "dev": "npm-run-all --parallel dev:ayokoding-web dev:organic-lever-web",
+    "build": "npm-run-all --parallel build:ayokoding-web build:organic-lever-web",
+    "test": "npm-run-all --parallel test:ayokoding-web test:organic-lever-web",
+    "lint": "npm-run-all --parallel lint:ayokoding-web lint:organic-lever-web",
+    "clean": "npm-run-all --parallel clean:ayokoding-web clean:organic-lever-web",
     "// ----- General scripts ----- //": "",
-    "build:all": "npm-run-all build:libs build:ayokoding build:organic-lever-web",
-    "test:unit": "npm run build:libs && npm-run-all -p test:ayokoding test:organic-lever-web test:libs",
-    "test:unit:watch": "npm-run-all -p test:ayokoding:watch test:organic-lever-web:watch test:libs:watch",
+    "build:all": "npm-run-all build:libs build:ayokoding-web build:organic-lever-web",
+    "test:unit": "npm run build:libs && npm-run-all -p test:ayokoding-web test:organic-lever-web test:libs",
+    "test:unit:watch": "npm-run-all -p test:ayokoding-web:watch test:organic-lever-web:watch test:libs:watch",
     "update:all": "npm update && npm-run-all -s update:apps",
     "update:apps": "cd apps && npm-run-all -p update:*",
     "clean:all": "rimraf **/node_modules",
