--- a/apps/organic-lever-web-e2e/package.json
+++ b/apps/organic-lever-web-e2e/package.json
@@ -1,7 +1,7 @@
 {
   "name": "organic-lever-web-e2e",
   "version": "1.0.0",
-  "description": "E2E tests for AyoKoding",
+  "description": "E2E tests for ayokoding-web",
   "scripts": {
     "test": "playwright test",
     "test:ui": "playwright test --ui",
