update npm scripts

--- a/package.json
+++ b/package.json
@@ -3,58 +3,58 @@
   "version": "1.0.0",
   "scripts": {
     "// ----- Installation scripts ----- //": "",
-    "install:all": "npm install && npm-run-all -s create-apps-dir install:ayokoding-web install:organic-lever-web install:organic-lever-web-e2e install:libs install:playwright",
-    "install:ayokoding-web": "cd apps/ayokoding-web && npm install",
-    "install:organic-lever-web": "cd apps/organic-lever-web && npm install",
-    "install:organic-lever-web-e2e": "cd apps/organic-lever-web-e2e && npm install",
-    "install:libs": "cd libs/hello && npm install",
-    "install:playwright": "cd apps/organic-lever-web-e2e && npx playwright install --with-deps",
+    "ayokoding-web:install": "cd apps/ayokoding-web && npm install",
     "create-apps-dir": "mkdirp apps",
+    "install:all": "npm install && npm-run-all -s create-apps-dir install:ayokoding-web install:organic-lever-web install:organic-lever-web-e2e install:libs install:playwright",
+    "libs:install": "cd libs/hello && npm install",
+    "organic-lever-web-e2e:install": "cd apps/organic-lever-web-e2e && npm install",
+    "organic-lever-web:install": "cd apps/organic-lever-web && npm install",
+    "playwright:install": "cd apps/organic-lever-web-e2e && npx playwright install --with-deps",
     "// ----- ayokoding-web scripts ----- //": "",
-    "dev:ayokoding-web": "npm run build:libs && cd apps/ayokoding-web && npm run dev",
-    "build:ayokoding-web": "cd apps/ayokoding-web && npm run build",
-    "start:ayokoding-web": "cd apps/ayokoding-web && npm run start",
-    "lint:ayokoding-web": "cd apps/ayokoding-web && npm run lint",
-    "test:ayokoding-web": "cd apps/ayokoding-web && npm run test",
-    "test:ayokoding-web:watch": "cd apps/ayokoding-web && npm run test:watch",
-    "clean:ayokoding-web": "rimraf apps/ayokoding-web/.next apps/ayokoding-web/out",
+    "ayokoding-web:build": "cd apps/ayokoding-web && npm run build",
+    "ayokoding-web:clean": "rimraf apps/ayokoding-web/.next apps/ayokoding-web/out",
+    "ayokoding-web:dev": "npm run libs:build && cd apps/ayokoding-web && npm run dev",
+    "ayokoding-web:lint": "cd apps/ayokoding-web && npm run lint",
+    "ayokoding-web:start": "cd apps/ayokoding-web && npm run start",
+    "ayokoding-web:test": "cd apps/ayokoding-web && npm run test",
+    "ayokoding-web:test:watch": "cd apps/ayokoding-web && npm run test:watch",
     "// ----- Organic Lever scripts ----- //": "",
-    "dev:organic-lever-web": "npm run build:libs && cd apps/organic-lever-web && npm run dev",
-    "build:organic-lever-web": "cd apps/organic-lever-web && npm run build",
-    "start:organic-lever-web": "cd apps/organic-lever-web && npm run start",
-    "lint:organic-lever-web": "cd apps/organic-lever-web && npm run lint",
-    "test:organic-lever-web": "cd apps/organic-lever-web && npm run test",
-    "test:organic-lever-web:watch": "cd apps/organic-lever-web && npm run test:watch",
-    "clean:organic-lever-web": "rimraf apps/organic-lever-web/.next apps/organic-lever-web/out",
+    "organic-lever-web:build": "cd apps/organic-lever-web && npm run build",
+    "organic-lever-web:clean": "rimraf apps/organic-lever-web/.next apps/organic-lever-web/out",
+    "organic-lever-web:dev": "npm run libs:build && cd apps/organic-lever-web && npm run dev",
+    "organic-lever-web:lint": "cd apps/organic-lever-web && npm run lint",
+    "organic-lever-web:start": "cd apps/organic-lever-web && npm run start",
+    "organic-lever-web:test": "cd apps/organic-lever-web && npm run test",
+    "organic-lever-web:test:watch": "cd apps/organic-lever-web && npm run test:watch",
     "// ----- E2E Web scripts ----- //": "",
-    "test:e2e": "cd apps/organic-lever-web-e2e && npm run test",
-    "test:e2e:ui": "cd apps/organic-lever-web-e2e && npm run test:ui",
-    "test:e2e:chrome": "cd apps/organic-lever-web-e2e && npm run test:chrome",
-    "test:e2e:firefox": "cd apps/organic-lever-web-e2e && npm run test:firefox",
-    "test:e2e:safari": "cd apps/organic-lever-web-e2e && npm run test:safari",
-    "test:e2e:ci": "start-server-and-test 'npm run dev:ayokoding-web' http://localhost:3300 'npm run dev:organic-lever-web' http://localhost:3301 'cd apps/organic-lever-web-e2e && npm run test'",
+    "e2e:test": "cd apps/organic-lever-web-e2e && npm run test",
+    "e2e:test:chrome": "cd apps/organic-lever-web-e2e && npm run test:chrome",
+    "e2e:test:ci": "start-server-and-test 'npm run ayokoding-web:dev' http://localhost:3300 'npm run organic-lever-web:dev' http://localhost:3301 'cd apps/organic-lever-web-e2e && npm run test'",
+    "e2e:test:firefox": "cd apps/organic-lever-web-e2e && npm run test:firefox",
+    "e2e:test:safari": "cd apps/organic-lever-web-e2e && npm run test:safari",
+    "e2e:test:ui": "cd apps/organic-lever-web-e2e && npm run test:ui",
     "// ----- Library scripts ----- //": "",
-    "build:libs": "cd libs/hello && npm run build",
-    "test:libs": "cd libs/hello && npm run test",
-    "test:libs:watch": "cd libs/hello && npm run test:watch",
-    "watch:libs": "cd libs/hello && npm run watch",
+    "libs:build": "cd libs/hello && npm run build",
+    "libs:test": "cd libs/hello && npm run test",
+    "libs:test:watch": "cd libs/hello && npm run test:watch",
+    "libs:watch": "cd libs/hello && npm run watch",
     "// ----- Combined scripts ----- //": "",
-    "dev": "npm-run-all --parallel dev:ayokoding-web dev:organic-lever-web",
-    "build": "npm-run-all --parallel build:ayokoding-web build:organic-lever-web",
-    "test": "npm-run-all --parallel test:ayokoding-web test:organic-lever-web",
-    "lint": "npm-run-all --parallel lint:ayokoding-web lint:organic-lever-web",
-    "clean": "npm-run-all --parallel clean:ayokoding-web clean:organic-lever-web",
+    "build": "npm-run-all --parallel ayokoding-web:build organic-lever-web:build",
+    "clean": "npm-run-all --parallel ayokoding-web:clean organic-lever-web:clean",
+    "dev": "npm-run-all --parallel ayokoding-web:dev organic-lever-web:dev",
+    "lint": "npm-run-all --parallel ayokoding-web:lint organic-lever-web:lint",
+    "test": "npm-run-all --parallel ayokoding-web:test organic-lever-web:test",
     "// ----- General scripts ----- //": "",
-    "build:all": "npm-run-all build:libs build:ayokoding-web build:organic-lever-web",
-    "test:unit": "npm run build:libs && npm-run-all -p test:ayokoding-web test:organic-lever-web test:libs",
-    "test:unit:watch": "npm-run-all -p test:ayokoding-web:watch test:organic-lever-web:watch test:libs:watch",
-    "update:all": "npm update && npm-run-all -s update:apps",
-    "update:apps": "cd apps && npm-run-all -p update:*",
+    "build:all": "npm-run-all libs:build ayokoding-web:build organic-lever-web:build",
     "clean:all": "rimraf **/node_modules",
     "format": "prettier --write .",
-    "prepare": "husky install && npm run make-hooks-executable",
     "make-hooks-executable": "node scripts/make-hooks-executable.js",
-    "reset:all": "npm-run-all clean:all install:all"
+    "prepare": "husky install && npm run make-hooks-executable",
+    "reset:all": "npm-run-all clean:all install:all",
+    "test:unit": "npm run libs:build && npm-run-all -p ayokoding-web:test organic-lever-web:test libs:test",
+    "test:unit:watch": "npm-run-all -p ayokoding-web:test:watch organic-lever-web:test:watch libs:test:watch",
+    "update:all": "npm update && npm-run-all -s update:apps",
+    "update:apps": "cd apps && npm-run-all -p update:*"
   },
   "author": "",
   "license": "MIT",
